memoized some components, as well as fixed a visibility bug

--- a/src/app/Pages/Home/components/Socials/Socials.module.scss
+++ b/src/app/Pages/Home/components/Socials/Socials.module.scss
@@ -18,6 +18,14 @@
         right: 6px;
     }
 
+    opacity: 0;
+    transition: opacity 350ms;
+    
+    &.visible {
+        opacity: 1;    
+    }
+
+
     &>a {
         display: grid;
 
